# learning-architecture

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.yaml  Manuale_Italiano_Laboratorio_Linguistico_G1-G5.docx  PRODUCTION_READINESS_REPORT.md  PUSH_TO_PRODUCTION.md  README.md  docker-compose.yml  install.ps1  install.sh  lv.spec  mc  mc.spec  palette_imported.yaml  publication-policy.md  pyproject.toml  setup.sh
artifacts/: inventory.yaml
bridges/: __init__.py  base.py  discord_bridge.py  email_bridge.py  signal_bridge.py  slack_bridge.py  teams_bridge.py  whatsapp_bridge.py
claims/: evidence_register.yaml
collective/: contributor.py  governance.py  validator.py
config/: core.md  decisions.md  litellm.yaml
contracts/: ROUTE_REACHABILITY.yaml  UI_CONTRACT.yaml
curriculum/: lingua_viva_matrix.yaml
desktop/: package-lock.json  package.json  tsconfig.json
dev/: AUDIT_BUILT_NOT_UI_MOUNTED_2026-07-23.md  EXECUTION_PROMPT_DOWNLOAD_BUTTONS_2026-07-20.md  EXECUTION_PROMPT_INSTALL_RELEASE_HARDENING_2026-07-20.md  EXECUTION_PROMPT_LV_BLT007_SYSTEM_STATS_MOUNT_2026-07-23.md  EXECUTION_PROMPT_LV_CLAUDIA_LENS_REPASS_2026-07-20.md  EXECUTION_PROMPT_LV_CLAUDIA_LENS_REPASS_2026-07-20_CODEX.md  EXECUTION_PROMPT_LV_DEMO_READINESS_2026-07-22_KIRO.md  EXECUTION_PROMPT_LV_EVAL_ARCHITECTURE_2026-07-22_KIRO.md  EXECUTION_PROMPT_LV_EVAL_PHASE2_PHASE3_2026-07-22_KIRO.md  EXECUTION_PROMPT_LV_EXTRACT_FILL_VERIFY_ENGINE_2026-07-22_CLAUDE.md  EXECUTION_PROMPT_LV_FILEMAP_VERIFICATION_UI_2026-07-22_CODEX.md  EXECUTION_PROMPT_LV_FULL_ARTIFACT_HARDENING_2026-07-20_CODEX.md  INDEX.md  (+21 more)
(+513 files in other folders)
