[project]
name = "still-i-rise"
version = "1.0.0"
description = "The Governed Agent OS. Your judgment compounds here."
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Mical Neill"}]

dependencies = [
    "pyyaml>=6.0",
    "redis>=5.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=12.0",
    "pdfplumber>=0.11",
    "sqlite-vec>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
